@@ -1,4 +1,6 @@
+    - added cycle function (Monte)
     - fixed bug with resource testing, and include_path (Monte)
+    - fixed a bug with register_outputfilter function (Monte)
 
 Version 2.1.0
 -------------
